--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <app-item-form></app-item-form>
-  <app-items></app-items>
+  <router-outlet></router-outlet>
 </div>
