--- a/src/app/components/item-form/item-form.component.html
+++ b/src/app/components/item-form/item-form.component.html
@@ -4,6 +4,6 @@
             <input type="text" name="text" [(ngModel)]="text" class="form-control" placeholder="Add an item to pack">
         </div>
         <input type="submit" value="Add item" class="btn btn-primary" [disabled]="!this.text"><br>
-        <button (click)="clearState()" type="button" class="btn btn-warning" [hidden]="!this.text">Clear field</button>
+        <button (click)="clearState()" type="button" class="mt-3 btn btn-warning" [hidden]="!this.text">Clear field</button>
     </form>
 </div>
