--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -11,11 +11,7 @@
                 <div class="error-details">
                     Sorry, an error has occured, Requested page not found!
                 </div>
-                <div class="error-actions">
-                    <!-- <a routerLink="/" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-                        Take Me Home </a><a href="http://www.jquery2dotnet.com" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a> -->
-                </div>
-                <button routerLink="/" class="btn btn-primary btn-lg">Take me home</button>
+                <button routerLink="/" class="mt-3 btn btn-primary btn-lg">Take me home</button>
             </div>
         </div>
     </div>
